<resources>
    <string name="app_name">Hansung Timetable</string>

    <string name="tab_timetable">Timetable</string>
    <string name="tab_assignment">Assignments</string>
    <string name="tab_memo">Memos</string>

    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_homepage">University Site</string>

    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="title_new_subject">New Subject</string>
    <string name="title_edit_subject">Edit Subject</string>
    <string name="hint_subject_name">Subject name</string>
    <string name="hint_professor">Professor</string>
    <string name="hint_room">Classroom</string>
    <string name="label_day">Day</string>
    <string name="label_start_time">Start</string>
    <string name="label_end_time">End</string>

    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>

    <string name="toast_subject_saved">Saved</string>
    <string name="toast_subject_deleted">Deleted</string>
    <string name="toast_invalid_time">End time must be after start</string>
    <string name="toast_subject_name_required">Enter subject name</string>
    <string name="confirm_delete">Delete?</string>
    <string name="confirm_delete_msg">This cannot be undone.</string>

    <string name="title_new_assignment">New Assignment</string>
    <string name="title_edit_assignment">Edit Assignment</string>
    <string name="hint_title">Title</string>
    <string name="hint_memo">Memo</string>
    <string name="label_due_date">Due date</string>
    <string name="label_subject">Subject</string>
    <string name="label_no_subject">(none)</string>
    <string name="label_status_done">Done</string>
    <string name="label_status_open">Open</string>
    <string name="empty_assignments">No assignments.\nTap + to add.</string>
    <string name="toast_assignment_saved">Saved</string>
    <string name="toast_title_required">Enter title</string>

    <string name="title_new_memo">New Memo</string>
    <string name="title_edit_memo">Edit Memo</string>
    <string name="hint_content">Content</string>
    <string name="empty_memos">No memos.\nTap + to add.</string>
    <string name="toast_memo_saved">Saved</string>

    <string name="pref_category_semester">Semester</string>
    <string name="pref_semester_title">Current semester</string>
    <string name="pref_category_about">About</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_homepage_title">Hansung University Homepage</string>
</resources>
