<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_book"
            android:title="@string/tab_timetable" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/ic_assignment"
            android:title="@string/tab_assignment" />
        <item
            android:id="@+id/nav_memo"
            android:icon="@drawable/ic_memo"
            android:title="@string/tab_memo" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_homepage"
                android:icon="@drawable/ic_school"
                android:title="@string/menu_homepage" />
        </menu>
    </item>

</menu>
